# serializer version: 1
# name: test_climate_states[freezer-platforms0][climate.freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'Dummy_Appliance_1-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states[freezer-platforms0][climate.freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': -18,
      'friendly_name': 'Freezer',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states[freezer-platforms0][climate.refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'Dummy_Appliance_2-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states[freezer-platforms0][climate.refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 4,
      'friendly_name': 'Refrigerator',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -13,
      'min_temp': -27,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'Dummy_Appliance_1-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': -18,
      'friendly_name': 'Freezer',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -13,
      'min_temp': -27,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 9,
      'min_temp': 1,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'Dummy_Appliance_2-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 4,
      'friendly_name': 'Refrigerator',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 9,
      'min_temp': 1,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': -18,
      'friendly_name': 'Fridge freezer Freezer',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Fridge freezer Freezer',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -14,
      'min_temp': -28,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 9,
      'min_temp': 1,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 4,
      'friendly_name': 'Fridge freezer Refrigerator',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 9,
      'min_temp': 1,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 9,
      'min_temp': 1,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Fridge freezer Refrigerator',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 9,
      'min_temp': 1,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -15,
      'min_temp': -30,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': -28,
      'friendly_name': 'Fridge freezer Zone 3',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -15,
      'min_temp': -30,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': -25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -15,
      'min_temp': -30,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Fridge freezer Zone 3',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': -15,
      'min_temp': -30,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': -18,
      'friendly_name': 'Fridge freezer Freezer',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Fridge freezer Freezer',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 4,
      'friendly_name': 'Fridge freezer Refrigerator',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Fridge freezer Refrigerator',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': -28,
      'friendly_name': 'Fridge freezer Zone 3',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': -25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Fridge freezer Zone 3',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 1.0,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
